fix: solved scroll on mobile

--- a/src/app/pages/spash/splash.module.css
+++ b/src/app/pages/spash/splash.module.css
@@ -1,6 +1,6 @@
 .main {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #03050D;
     margin: 0px;
     display: flex;
